--- a/docs/tutorial-QGIS-TIM.qmd
+++ b/docs/tutorial-QGIS-TIM.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Tutorial QGIS-Tim <br> *[under construction]*"
+title: "Tutorial QGIS-Tim"
 output-dir: ../_build
 format: html
 mainfont: Arial
@@ -8,7 +8,7 @@ mainfont: Arial
 
 ## Requirements
 - Be sure QGIS 3.22.00 or higher is installed. 
-- Download the tutorial material. [Follow this link.](https://deltares.thegood.cloud/s/MB94b7mLmpgNcbj)
+- Download the tutorial material. [Follow this link.](https://deltares.thegood.cloud/s/oJE7qAHG3nZw2fk)
 - Be sure the GIS-TIM Python package is installed (see ... for instructions). 
 - The installation of the necessary QGIS-Tim plugin is part of this Tutorial. 
 
@@ -29,10 +29,10 @@ With the basic experience from this tutorial and the online documentation on TIM
 In one of the fields west of Rijsenhout industrial activities are planned, the construction of glass houses. From historical sources it is known that some bombs from World War 2 are still in the subsoil. Before building starts, these bombs are removed for safety reasons. The question is: what dewatering is necessary to be able to remove the bombs in dry conditions? The contractor plans to drill sheet piles to prevent the excavation from collapsing. The groundwater level inside the construction pit is lowered with a set of wells just in the top of the aquifer within the construction pit. All drain water is infiltrated over a stretch of wells near the existing buildings.<br> 
 On the project location the top layer is 12 m thick and consist of low permeable combination of clay and peat. Below this toplayer we find an aquifer of 50 m. The Westeinderplassen, a lake system with a depth of 3 m., is located East of the project area. 
 
-![Vertical cross section of dataset BRO GeoTOP v1.4.1](figures/tutorial/GeoTOP-Verticaledoorsnede.png){width=100% #fig-GeoTOP-Verticaledoorsnede}
+![Geological cross section near Rijssenhout \[source: BRO GeoTOP v1.4.1\]](figures/tutorial/GeoTOP-Verticaledoorsnede.png){width=100% #fig-GeoTOP-Verticaledoorsnede}
 
 # Getting Started 
-(@) Launch QGIS from your START menu, your desktop or click on …\\QGIS3.24.0\\bin\\qgis-bin.exe.
+(@) Launch QGIS from your START menu, your desktop or click on …\\QGIS3.28.0\\bin\\qgis-bin.exe.
 
 ---
 
@@ -72,10 +72,10 @@ This is the moment to download/import four plugins needed for this tutorial:
 - the PDOK plugin. The official version installed via QGIS. This plugin gives access to a large database from which we will load the topographic maps and use the navigation option.
 
 (@) Go to *Plugins* from the main menu and select *Manage and Install Plugins…* to open the plugin window. 
-(@) On the left, section select *Install from ZIP*.
-(@) Click the Browse button (![](figures/tutorial/button-Qgis-browse.png){width=4%}) and from the tutorial dataset select the ZIP file "TIM-tutorial\\imod-plugin.zip". 
+(@) On the left section select *Install from ZIP*.
+(@) Click the Browse button (![](figures/tutorial/button-Qgis-browse.png){width=4%}) and from the tutorial dataset select the ZIP file "QGIS-Tim_training\\QGIS-iMOD-plugin.zip". 
 (@) Click *Install Plugin*.
-(@) In the same way, install the QGIS-Tim plugin using the ZIP file "TIM-tutorial\\TIM-plugin.zip". 
+(@) In the same way, install the QGIS-Tim plugin using the ZIP file "QGIS-Tim_training\\QGIS-TIM-plugin.zip". 
 (@) From the left section, select the group *All* to see all available plugins. 
 (@) Search for “Value Tool” and install it. 
 (@) Search for “PDOK services plugin” and install it. 
@@ -111,7 +111,7 @@ Our project area is near the town of Rijsenhout so let's navigate to that town u
 Let's now open a shape file containing the locations and depths of the bombs.
 
 (@) Go to *Layer* in the main menu, go to *Add layer* and select *Add Vector layer*.
-(@) User the browse button (![](figures/tutorial/button-Qgis-browse.png){width=4%}) and from the tutorial material select “…\\TIM-training\\dbase\\bombs.shp”.
+(@) User the browse button (![](figures/tutorial/button-Qgis-browse.png){width=4%}) and from the tutorial material select “…\\QGIS-Tim_training\\dbase\\bombs.shp”.
 (@) Click on *Add* and *Close* the window.
 
 ![](figures/tutorial/emoji-tip.png){width=3%} **Tip:** a fast alternative for adding layers: from the menu *View > Toolbar* add the *Manage Layers Toolbar* and use the button ![](figures/tutorial/button-Qgis-VectorLayer.png){width=4%}.
@@ -123,14 +123,14 @@ Let's now open a shape file containing the locations and depths of the bombs.
 
 Let's save this project to be able to return to it later or in case of a crash of QGIS.
 
-(@) Go to *Project* in the main menu, select *Save As* and select a folder and a file name for your project, e.g. “…\\TIM-training\\tutorial1.qgz”
+(@) Go to *Project* in the main menu, select *Save As* and select a folder and a file name for your project, e.g. “…\\QGIS-Tim_training\\tutorial1.qgz”
 
 ## Start your Tim model<br> 
 Now we are ready to activate the QGIS-Tim plugin. 
 
 (@) Click on the QGIS-Tim plugin button (![](figures/tutorial/button-Qgis-tim.png){width=4%}) and the QGIS-Tim panel appears.
 (@) Go to the tab *GeoPackage*. <br> Here we will create an empty database (geopackage) to store all elements and parameters for the model. 
-(@) Click the *New* button to create the GeoPackage and save it for instance in the folder with your training data, e.g. "..\\TIM-Training\\dbase\\geopackage\\case-Rijsenhout.gpkg".
+(@) Click the *New* button to create the GeoPackage and save it for instance in the folder with your training data, e.g. "..\\QGIS-Tim_training\\dbase\\case-Rijsenhout.gpkg".
 
 Your window looks like in @fig-Panel-QGIS-Tim.
 
@@ -244,23 +244,23 @@ TIP: If you do not see any line, perhaps the axes are not defined well. To view 
 ***Model 3: multiple layers*** <br>
 A single aquifer is of course not enough to describe the geology of our project area. A simplification of the geology is given in the cross section in @fig-photo-fieldwork-liftbomb-crosssection. There is the Holocene toplayer with a resistance of 1500 days on top of an aquifer with a horizontal permeability of 30 m/d and a thickness of 50 m. The anisotropy factor is 3 resulting in a vertical resistance of 0.1 day per meter. TIM can handle multiple layers so the next step is to bring these parameters into the model.
 
-![Project area cross section / lifting the World War II bomb.](figures/tutorial/photo-fieldwork-liftbomb-crosssection.jpg){width=100% #fig-photo-fieldwork-liftbomb-crosssection}
+![Project area cross section (left) lifting the World War II bomb (right)](figures/tutorial/photo-fieldwork-liftbomb-crosssection.jpg){width=100% #fig-photo-fieldwork-liftbomb-crosssection}
 
 (@) In your geopackage select the layer "timml Aquifer:Aquifer" and click your right mouse button.
-(@) From the menu select *Open Attribute Table* and the table opens in a new window. Once again, press F6 or a quick open of the Attribute Table.
+(@) From the menu select *Open Attribute Table* and the table opens in a new window. Once again, press F6 for a quick open of the Attribute Table.
 (@) Start the editing mode with a click on the *Toggle Edditing Mode* button (![](figures/tutorial/button-Qgis-AttributeTable-StartEditingMode.png ){width=4%}).
-(@) Add three extra aquifers / features with the *Add Feature* button (![](figures/tutorial/button-AttributeTable-AddFeature.png){width=15%}).
+(@) Add three extra aquifers / features; click three times on the *Add Feature* button (![](figures/tutorial/button-AttributeTable-AddFeature.png){width=15%}).
 
 The Holocene toplayer is not a distinguished layer but a resistance on top of layer 0.
 
 (@) Fill the features with the values from the table below: 
 
-|fid|layer|aquitard_c|aquifer_k|aquifer_top|aquifer_bottom|semiconf_top|semiconf_head|
+|fid|layer|aquifer_top|aquifer_bottom|aquitard_c|aquifer_k|semiconf_top|semiconf_head|
 |---|---|---|---|---|---|---|---|
-|1|0|1500|30|-17|-22|-5|-6|
-|2|1|0.5|30|-22|-27|NULL|NULL|
-|3|2|1.25|30|-27|-47|NULL|NULL|
-|4|3|2|30|-47|-67|NULL|NULL|
+|1|0|-17|-22|1500|30|-5|-6|
+|2|1|-22|-27|0.5|30|NULL|NULL|
+|3|2|-27|-47|1.25|30|NULL|NULL|
+|4|3|-47|-67|2|30|NULL|NULL|
 
 (@) Save your changes and close the window.
 (@) Go to the tab *Compute* and run the new model with a click on the button *Compute*.
@@ -302,14 +302,14 @@ You probably tried to close the construction pit but either your lines cross or 
 Perhaps you are not satisfied with your created construction pit. 
 
 (@) You can play around with other nice options in QGIS to move (![](figures/tutorial/button_MoveFeature.png){width=4%}), rotate (![](figures/tutorial/button_RotateFeature.png){width=4%}) or scale (![](figures/tutorial/button_ScaleFeature.png){width=4%}) your pit. 
-(@) End the *Toggle Edditing Mode* with ![](figures/tutorial/button-Qgis-AttributeTable-StartEditingMode.png ){width=4%}.
+(@) End the *Toggle Edditing Mode* with ![](figures/tutorial/button-Qgis-AttributeTable-StartEditingMode.png ){width=4%} and save your changes.
 (@) In the QGIS-Tim panel go to *Compute*. 
 (@) Rerun your model and check the calculated heads.
 
 Disappointed in the effect of the sheet piles on the calculated head? You are right if you expected no major effect because of the shallow penetration in this high permeable thick aquifer. If we would increase the aquitard_c between layers 0 and 1, perhaps we would see more effect of the sheet piles. <br>
 
 (@) If you dare... try to rerun the model yourself with aquitard_c = 800 (layer 1) and see that the drawdown is limited to the construction pit (@fig-figure_DrawdownConstructionPit.)
-(@) Don't forget to undo this side path and make aquitard_c = 0.5 again.
+(@) Don't forget to undo this side path and make aquitard_c = 0.5 again for layer 1.
 
 ![Drawdown within the construction pit](figures/tutorial/figure_DrawdownConstructionPit.png){width=60% #fig-figure_DrawdownConstructionPit}
 
@@ -418,32 +418,79 @@ The new results are added as new layer to the project. Check for instance sub-gr
 (@) In *Geopackage* check again the Lake element.
 (@) In *Compute* reset the path to the old name.
 
-***Model 8: Abstraction effect over time (plenary demo, not ready yet)*** <br>
-Now you are ready for the last step: make your model transient. We keep it simpel: we run the model for 30 days and see the effect of the well increase. 
+***Model 8: Abstraction effect over time*** <br>
+Now you are ready for the last step: make your model transient. We keep it simpel: we run the model for 30 days and see the increasing effect of the well. 
 
 (@) In *Compute* within the *output* section change "steady state" into "transient".
 (@) Go to *Geopackage* and see that 5 elements have a transient component. 
+
+By selecting the "transient" option, columns containing extra parameters necessary for a transient model have been unhide now. First of all we see it in the layer "timml Aquifer:Aquifer" where columns "storage" and "porosity are visible now. 
+
 (@) In your geopackage select the layer "timml Aquifer:Aquifer".
-(@) Open its table, start the editing mode and for every layer set both acquifer_s and acquitard_s to 0.0001. Acquitard_s (layer 0) = 0.1.  
-(@) In your geopackage select the layer "ttim Temporal Settings:Aquifer".
+(@) Open its table, start the editing mode and for every layer set both acquifer_s and acquitard_s to 0.001. Acquitard_s (layer 0) = 0.25.  
+
+**NB!** In transient mode, TIM can not handle aquitard with zero thickness so lets's set the aquitard thickness to 0.1 m
+
+(@) Change the values in the column "aquifer_top" to -17.0, -22.1, -27.1 and -47.1 m.
+(@) In your geopackage select the layer "ttim Temporal Settings:Aquifer" to define the temporal properties of the model.
 (@) Open its table, start the editing mode and add a new feature. 
-(@) Make tmin=0.1, tmax=30, tstart=0, reference_date=2023-03-16 00:00:00.
+(@) Make sure that tmin=0.01, tmax=30, tstart=0, reference_date=2023-03-23 00:00:00.
+(@) In your geopackage select the layer "ttim Computation Times:Domain" in order to definte the moments in time for which raster output is saved.   
+(@) Open its table, start the editing mode and add 7 features / periods (click 6 times "Add feature").
+(@) In the column "time" add the moments 1,2,5,10, 15, 20 and 30. 
+(@) Save and Close the table. 
+
+For the observations we can define a different set of output moments.  
+
+(@) In your geopackage select the layer "ttim Observation:Piezometers".   
+(@) Open its table, start the editing mode and add 10 features / periods (click 6 times "Add feature").
+(@) In the column "time" add the moments 1,2,3,4,5,10,15,20,25 and 30. 
+(@) Save and Close the table. 
+
+Special attention for the Well package while it has 2 options to make it transient:
+
+- Simple: a well can be switched on and off only once. Parameters are set in "timml Well:DewateringWell".
+- Detailed: a well can be switched on and off multiple times within the modeled period. Parameters are set in "ttim Well:DewateringWell".
+
+In this training we show you the simple version. 
+
 (@) In your geopackage select the layer "ttim Well:DewateringWell".   
-(@) Open its table, start the editing mode and add a new feature.
-(@) Make tmin=0.1, tmax=30, tstart=0, reference_date=2023-03-16 00:00:00.
-(@) In your geopackage select the layer "ttim Computation Times:Domain" in order to definte the stress periods.   
-(@) Open its table, start the editing mode and add 5 features / periods.
-(@) In the column "time" add the moments 1,2,5,10 and 15. 
+(@) Open its table, start the editing mode and see that columns with time dependent parameters are visible now. 
+(@) Switch off the Steady State abstraction: discharge = 0.
+(@) Switch on the Transient abstraction: time_start=2, time_end=30, discharge_transient=2000, caisson_radius=1.
+(@) Comput your transient model in the tab *Compute*. 
 
-....
-Transient output: <br>
+In case of a successful calculation a new layer is added to your Vector output: case-Rijsenhout-ttim Observation:Piezometers. This layer contains transient data which is indicted with the clock icon right from the layer name. There are 2  ways to visualize these calculated heads in the observations point a) animation over time and b) timeseries at location.
 
-- use the ![](figures/tutorial/button_TemporalControllerPanel.png){width=3%} to open the *Temporal Controller Panel*.
-- "case-Rijsenhout-timml Observation:Piezometers" containts transient data. That is indicated with the clock icon near this layer
-- display transient contour lines
-- use iMOD Time Series widget to show head over time.
+(@) For the animation over time, activate the *Temporal Control Panel* with the button ![](figures/tutorial/button_TemporalControllerPanel.png){width=4%} on the Map Navigation Toolbar.
+(@) For timeseries at location activate the Timeseries panel with the *Timeseries* button (![](figures/tutorial/button_iMOD-TimeSeries.png){width=4%}) on the iMOD Toolbar.
+(@) Be sure that "case-Rijsenhout-ttim Observation:Piezometers" is checked and "case-Rijsenhout-timml Observation:Piezometers" is unchecked.
+(@) In the Temporal Controller panel click the green play button (![](figures/tutorial/button_TemporalControllerPanel-menu.png){width=14%}). Navigation buttons appear.
+(@) Increase the *Step* to 16 hours and start the animation with a click on the *Play* button (![](figures/tutorial/button_TemporalControler-play.png){width=4%}).
+
+Only the first few days you see most prominent drawdown. Let's now display the timeseries at the point of your mouse. 
+
+(@) In the iMOD time series panel be sure the layer "case-Rijsenhout-head_layer_0" is selected. 
+(@) For "variable:" select *head* and for "layers:" select *0*.   
+(@) Click the button *Select Points*, your mouse changes into a ![](figures/tutorial/mouse_plus.png). Be sure *Update on Selection* is checked and hover over the mesh. The graph shows the timeseries at the location of your mouse. 
+(@) Deselect the checkbox *Update on Selection*. 
+(@) Click the button *Select Points* (your mouse becomes a ![](figures/tutorial/mouse_plus.png) and with the left mouse button select 3 points ad random. 
+(@) Finally click the *Plot* button and the 3 timeseries are added to the chart. Colors can be changed.  
+
+In the same way you can display the time series from the Observations. 
+
+(@) In the iMOD time series panel select the layer "case-Rijsenhout-ttim Observation:Piezometers". 
+(@) For "ID column:" select *label* and for "Variable:" select *head_layer0*. Don't forget to **deselect *fid***.   
+(@) Click the button *Select Points* and draw a box with your mouse to select one or more observation points. 
+(@) Click the *Plot* button and the selected timeseries are added to the chart. Colors can be changed.  
+
+![Calculated time series at observations locations](figures/tutorial/figure_HeadTimeSeries01.png){width=100% #fig-figure_HeadTimeSeries01}
 
 ***Export your TIM model to Python*** <br>
+For scenario calculation or sensitivity analysis you probably want to switch from QGIS to Python for efficiency reasons. In this training we only show you the first step: export your model to a Python file (*.py). Your TIM model is just a set of elements (points, lines, polygons) and its parameters so the Python file is not very large. 
 
 (@) In QGIS-Tim go to the tab *GeoPackage*. 
 (@) Click the button *Convert GeoPackage to Python script* and you can save the *.py file wherever you like.
+(@) Check the content of the file with yout texteditor (e.g. Notepad).
+
+The tutorial ends here. You can save your QGIS project if you like. Thank you!
