--- a/docs/tutorial-QGIS-TIM.qmd
+++ b/docs/tutorial-QGIS-TIM.qmd
@@ -1,9 +1,5 @@
 ---
 title: "Tutorial QGIS-Tim"
-output-dir: ../_build
-format: html
-mainfont: Arial
-#monofont: Roboto
 ---
 
 ## Requirements
@@ -31,7 +27,7 @@ On the project location the top layer is 12 m thick and consist of low permeable
 
 ![Geological cross section near Rijssenhout \[source: BRO GeoTOP v1.4.1\]](figures/tutorial/GeoTOP-Verticaledoorsnede.png){width=100% #fig-GeoTOP-Verticaledoorsnede}
 
-# Getting Started 
+## Getting Started 
 (@) Launch QGIS from your START menu, your desktop or click on …\\QGIS3.28.0\\bin\\qgis-bin.exe.
 
 ---
@@ -153,7 +149,7 @@ If you had no introduction to the TIM plugin, read the Intermezzo below for a ge
 
 Now we are ready to define our first steady state model by parameterizing our Aquifer. <br>
 
-***Model 1: single aquifer*** <br>
+## Model 1: single aquifer
 We start with a very simple 'model', only the parameters of a single aquifer. 
 Important message: all editing of model parameters and model elements you do in the *Layers* panel on the left! 
 
@@ -188,7 +184,7 @@ After the calculation you see that the result is automatically added to the geop
 
 The calculation result is now visible and we see a raster with just the value 0, not a very exciting result because no other elements are present yet. Let's now add a well element.
 
-***Model 2: single well***<br> 
+## Model 2: single well
 
 (@) First hide the output layers by deselecting both the rasters (case-Rijsenhout-output:raster) and meshes (case-Rijsenhout-output:mesh).
 (@) Go to the tab *Elements* in QGIS-Tim.
@@ -241,7 +237,7 @@ TIP: If you do not see any line, perhaps the axes are not defined well. To view 
 
 ![Cross section with calculated Head](figures/tutorial/figure_HeadsInCrossection01.png){width=100% #fig-figure_HeadsInCrossection01}
 
-***Model 3: multiple layers*** <br>
+## Model 3: multiple layers
 A single aquifer is of course not enough to describe the geology of our project area. A simplification of the geology is given in the cross section in @fig-photo-fieldwork-liftbomb-crosssection. There is the Holocene toplayer with a resistance of 1500 days on top of an aquifer with a horizontal permeability of 30 m/d and a thickness of 50 m. The anisotropy factor is 3 resulting in a vertical resistance of 0.1 day per meter. TIM can handle multiple layers so the next step is to bring these parameters into the model.
 
 ![Project area cross section (left) lifting the World War II bomb (right)](figures/tutorial/photo-fieldwork-liftbomb-crosssection.jpg){width=100% #fig-photo-fieldwork-liftbomb-crosssection}
@@ -280,7 +276,7 @@ Let's now check the calculated heads for the 4 layers. <br>
 
 **NB** You don't need to 'add' all four layers separately. Just use the mesh file "case-Rijsenhout-head_layer_0" and from the dropdown menu *Variable:* select the four bands/layers. 
 
-***Model 4: add a set of sheet piles*** <br>
+## Model 4: add a set of sheet piles
 Now we introduce a new but frequently used element: the sheet pile. 
 
 (@) Return to the QGIS-Tim panel and go to the tab *Elements*.
@@ -315,7 +311,7 @@ Disappointed in the effect of the sheet piles on the calculated head? You are ri
 
 ***
 
-![](figures/tutorial/emoji-exclamation.png){width=4%} **How to reopen TIM after closing QGIS.** <br>
+## ![](figures/tutorial/emoji-exclamation.png){width=4%} How to reopen TIM after closing QGIS.
 Before we introduce you another new TIM element we must explain you how to reopen your TIM project after a closure of QGIS. A crash might close QGIS or just a long day of work is a reason to shut down your laptop. Always remember two things:
 
 - your geopackage (*.gpkg) contains the complete set of model features and parameter values. Every time you change a model element, you will remember, you had to save the changes. So the GPKG file is always up to date. 
@@ -340,7 +336,7 @@ The following steps are the right way to go for now:
 
 ***
 
-***Model 5: add infiltration of drainwater*** <br>
+## Model 5: add infiltration of drainwater
 To prevent damage on the private properties caused by the dewatering, the authorities demand 50% of the drained flux to be infiltrated. For the infiltration a horizontal well of 400 m is used. In TIM this element is called "Line Sink Ditch". Let's add this element just along the Aalsmeerderweg southeast of the project area.
 
 (@) On the tab *Elements* in QGIS-Tim click on the element "Line Sink Ditch".
@@ -361,7 +357,7 @@ See that layer "timml Line Sink Ditch:InfiltrationWell" is added to the timml su
 
 ![Calculated head from the abstraction (left) to the infiltration (right)](figures/tutorial/figure_HeadsInCrossection02.png){width=70% #fig-figure_HeadsInCrossection02}
 
-***Model 6: add observation points*** <br>
+## Model 6: add observation points
 We have the Value Tool and the Cross section tool to check for calculated values in the rasters. Besides that, TIM has the opporunity to add observation points automatically providing you with the calculated heads.
 
 (@) On the tab *Elements* in QGIS-Tim click on the element "Observation".
@@ -386,7 +382,7 @@ A layer with your contours is saved in the group "case-Rijsenhout-output:vector"
 
 ![Calculated heads, displayed as contour lines](figures/tutorial/figure_Contourlines.png){width=90% #fig-figure_Contourlines}
 
-***Model 7: determine the influence of the nearby lake*** <br>
+## Model 7: determine the influence of the nearby lake
 East of the project area there is a large lake. What will be the influence of this lake? Let's find out. <br>
 In TIM a lake is added as an inhomogeneity within the total model domain. This domain is described in table "timml Aquifer:Aquifer" we filled in with the first model. 
 
@@ -418,7 +414,7 @@ The new results are added as new layer to the project. Check for instance sub-gr
 (@) In *Geopackage* check again the Lake element.
 (@) In *Compute* reset the path to the old name.
 
-***Model 8: Abstraction effect over time*** <br>
+## Model 8: Abstraction effect over time
 Now you are ready for the last step: make your model transient. We keep it simpel: we run the model for 30 days and see the increasing effect of the well. 
 
 (@) In *Compute* within the *output* section change "steady state" into "transient".
@@ -486,7 +482,7 @@ In the same way you can display the time series from the Observations.
 
 ![Calculated time series at observations locations](figures/tutorial/figure_HeadTimeSeries01.png){width=100% #fig-figure_HeadTimeSeries01}
 
-***Export your TIM model to Python*** <br>
+## Export your TIM model to Python
 For scenario calculation or sensitivity analysis you probably want to switch from QGIS to Python for efficiency reasons. In this training we only show you the first step: export your model to a Python file (*.py). Your TIM model is just a set of elements (points, lines, polygons) and its parameters so the Python file is not very large. 
 
 (@) In QGIS-Tim go to the tab *GeoPackage*. 
